--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 #config app variables
-PORT=
-MY_VERIFY_FB_TOKEN=
+#config app env variables
+NODE_ENV=development
+PORT=8000
+MY_VERIFY_FB_TOKEN=randomstringlang21
 FB_PAGE_TOKEN=
