--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Hary Pham",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
